# plugin-editor

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/dependencies/: action.yml
.github/workflows/: cd.yml
overlays/: x64-osx10.13-dynamic.cmake  x64-osx10.9-dynamic.cmake
overlays/imgui/: 0001-combo-additional-flags.patch  portfile.cmake
overlays/libdecor/: portfile.cmake  vcpkg.json
overlays/nativefiledialog-extended/: 0001-enable-shared-library.patch  portfile.cmake  vcpkg.json
overlays/rapidfuzz/: portfile.cmake  vcpkg.json
overlays/sdl2/: 8184.patch  portfile.cmake  vcpkg.json
resources/: Editor-Info.plist.in  editor.appdata.xml  editor.desktop  io.github.quyykk.editor.appdata.xml
source/: ArenaControl.cpp  ArenaControl.h  ArenaPanel.cpp  ArenaPanel.h  CMakeLists.txt  Editor.cpp  Editor.h  EditorPlugin.cpp  EditorPlugin.h  EffectEditor.cpp  EffectEditor.h  FakeMad.h  FleetEditor.cpp  FleetEditor.h  GalaxyEditor.cpp  GalaxyEditor.h  GovernmentEditor.cpp  GovernmentEditor.h  HazardEditor.cpp  HazardEditor.h  MainEditorPanel.cpp  MainEditorPanel.h  MapEditorPanel.cpp  MapEditorPanel.h  OutfitEditor.cpp  OutfitEditor.h  OutfitterEditor.cpp  OutfitterEditor.h  OutfitterEditorPanel.cpp  OutfitterEditorPanel.h  PlanetEditor.cpp  PlanetEditor.h  Plugin.cpp  Plugin.h  ShipEditor.cpp  ShipEditor.h  ShipyardEditor.cpp  ShipyardEditor.h  SystemEditor.cpp  SystemEditor.h  (+9 more)
utils/: build_appimage.sh  check_cmake.sh
